--- a/src/Composants/list-employee-composant/list-employee-composant.css
+++ b/src/Composants/list-employee-composant/list-employee-composant.css
@@ -41,3 +41,69 @@
   #employee-div h1 {
     margin-bottom: 20px;
   }
+
+  .container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
+/* Container pour les éléments "entries-info" et "pagination-controls" */
+.entries-pagination-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+/* Style pour "entries-info" */
+.entries-info {
+  font-size: 14px;
+  color: #666;
+}
+
+/* Styles pour "pagination-controls" */
+.pagination-controls {
+  display: flex;
+  align-items: center;
+}
+
+/* Styles pour les boutons Précédent et Suivant */
+.pagination-controls button {
+  background-color: #009879;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  margin: 0 5px;
+  font-size: 14px;
+}
+
+.pagination-controls button:hover {
+  background-color: #009879;
+}
+
+/* Style pour le texte "Page x sur y" */
+.pagination-controls span {
+  font-size: 14px;
+  color: #333;
+  margin: 0 10px;
+}
+
+.container input {
+  width: 400px;
+}
+
+.container select {
+  width: 60px;
+}
